--- a/architecture.html
+++ b/architecture.html
@@ -15,9 +15,8 @@
 
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff;">
   <!-- Brand -->
-  <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a> 
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -34,7 +33,7 @@
         <a class="nav-link" href="about.html" >About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="design.html">Design</a>
+        <a class="nav-link active" href="design.html">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="resume.html">Resume</a>
@@ -49,12 +48,22 @@
 
 
 
-<ul class="nav justify-content-center designNav">
+
+
+
+<!-- project card -->
+
+  
+
+
+<div class="card-deck" id="projectCard">
+
+<ul class="nav justify-content-center designNav" style="margin: 0 auto">
   <li class="nav-item">
-    <a class="nav-link disabled" href="design.html">UI/UX</a>
+    <a class="nav-link disabled " href="design.html">UI/UX</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="architecture.html">Architecture</a>
+    <a class="nav-link active" href="architecture.html">Architecture</a>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" href="interior.html">Interior</a>
@@ -63,91 +72,93 @@
     <a class="nav-link disabled" href="art.html">Art</a>
   </li>
 </ul>
-
-
-
-
-
-<!-- project card -->
-
-
-
-
-<div class="card-deck" id="projectCard">
-
-
   <div class="row">
 
-  <div class="card text-center">
+  <a href="music.html" >
+  <div class="card text-center" style="height: 490px;">
     <img class="card-img-top" src="image/architecture/river/2.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Auditorium on Mississipi</h4>
-      <p class="card-text">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
+      <h4 class="card-title" style="color: black">Auditorium on Mississipi</h4>
+      <p class="card-text" style="color: black">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
       <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="music.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+  <a href="green.html" >
+  <div class="card text-center" style="height: 490px;">
     <img class="card-img-top" src="image/architecture/greenhouse/3.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Greenhouse</h4>
-      <p class="card-text">A project that considers water, wind, sunlight conditions for different types of plants</p>
+      <h4 class="card-title" style="color: black">Greenhouse</h4>
+      <p class="card-text" style="color: black">A project that considers water, wind, sunlight conditions for different types of plants</p>
       <p style="padding-top: 22px"> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="green.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="chapel.html" >
+  <div class="card text-center" style="height: 490px;">
     <img class="card-img-top" src="image/architecture/chapel/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Urban Chapel</h4>
-      <p class="card-text">A chapel that designed for people to meditate in forest park</p>
+      <h4 class="card-title" style="color: black">Urban Chapel</h4>
+      <p class="card-text" style="color: black">A chapel that designed for people to meditate in forest park</p>
       <p style="padding-top: 22px"> <small>(Tools: Handdrafting, Photography, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer" style="visibility: hidden;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
   </div>
 
   <div class="row">
-  
-  <div class="card text-center">
+  <a href="observatory.html" >
+  <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/architecture/observatory/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Observatory</h4>
-      <p class="card-text">An observatory inspired by the spreading pattern of leaves</p>
+      <h4 class="card-title" style="color: black">Observatory</h4>
+      <p class="card-text" style="color: black">An observatory inspired by the spreading pattern of leaves</p>
       <p> <small>(Tools: Handdrafting, Photography, Photoshop, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="observatory.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="building.html" >
+  <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/architecture/building/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Building System</h4>
-      <p class="card-text">A project to study the system and structure of architecture</p>
+      <h4 class="card-title" style="color: black">Building System</h4>
+      <p class="card-text" style="color: black">A project to study the system and structure of architecture</p>
       <p> <small>(Tools: Rhino, Illustrator, Photoshop, Indesign, Photography, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="building.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="environment.html" >
+  <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/architecture/environment/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Environmental System</h4>
-      <p class="card-text">A project to study the environmental context of buildings</p>
+      <h4 class="card-title" style="color: black">Environmental System</h4>
+      <p class="card-text" style="color: black">A project to study the environmental context of buildings</p>
       <p> <small>(Tools: Rhino, Climate Consultant, Illustrator, Photoshop, Indesign, Photography, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="environment.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
   </div>
 
 </div>
@@ -156,29 +167,16 @@
 
 <!-- footer -->
     <footer class="footer">
-      <div class="row">
 
-        <div class="col-sm-4">
-          <p>Categories</p>
-          <a href="architecture.html">Architecture</a>
-          <a href="art.html">Art</a>
-          <a href="interior.html">Interior Design</a>
-          <a href="design.html">User Interface</a>
-        </div>
+      <nav class="nav">
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="design.html">Projects</a>
+        <a class="nav-link" href="resume.html">Resume</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </nav>
 
-        <div class="col-sm-4">
-          <p>Social Media</p>
-          <a class="p" href="https://www.linkedin.com/in/sherry-li-062447b2">Linkedin</a>
-        </div>
 
-        <div class="col-sm-4">
-          <p>Contact Info</p>
-          <p class="email">nachuan@wustl.edu</p>
-        </div>
-        
-      </div>
     </footer>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
