--- a/art.html
+++ b/art.html
@@ -15,9 +15,8 @@
 
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff;">
   <!-- Brand -->
-  <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a> 
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -34,7 +33,7 @@
         <a class="nav-link" href="about.html" >About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="design.html">Design</a>
+        <a class="nav-link active" href="design.html">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="resume.html">Resume</a>
@@ -48,9 +47,15 @@
 
 
 
-<ul class="nav justify-content-center designNav">
+
+
+
+
+<!-- project card -->
+<div class="card-deck" id="projectCard">
+  <ul class="nav justify-content-center designNav" style="margin: 0 auto">
   <li class="nav-item">
-    <a class="nav-link disabled" href="design.html">UI/UX</a>
+    <a class="nav-link disabled " href="design.html">UI/UX</a>
   </li>
   <li class="nav-item">
     <a class="nav-link disabled" href="architecture.html">Architecture</a>
@@ -59,68 +64,71 @@
     <a class="nav-link disabled" href="interior.html">Interior</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="art.html">Art</a>
+    <a class="nav-link active" href="art.html">Art</a>
   </li>
 </ul>
 
-
-
-
-
-<!-- project card -->
-<div class="card-deck" id="projectCard">
-
-
   <div class="row">
 
-  <div class="card text-center">
+  <a href="painting.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/art/painting/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Painting</h4>
-      <p class="card-text">Studyings of color, landscape and human body</p>
+      <h4 class="card-title" style="color: black">Painting</h4>
+      <p class="card-text" style="color: black">Studyings of color, landscape and human body</p>
       <p> <small>(Tools: Oil Painting)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="painting.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="drawing.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/art/drawing/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Drawing</h4>
-      <p class="card-text">Studyings of Black and white</p>
+      <h4 class="card-title" style="color: black">Drawing</h4>
+      <p class="card-text" style="color: black">Studyings of Black and white</p>
       <p> <small>(Tools: Hand Drawing)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="drawing.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="photography.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/art/photography/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Photography</h4>
-      <p class="card-text">Studyings of Details</p>
+      <h4 class="card-title" style="color: black">Photography</h4>
+      <p class="card-text" style="color: black">Studyings of Details</p>
       <p> <small>(Tools: DSLR Camera)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="photography.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
   </div>
 
   <div class="row">
-  
-  <div class="card text-center">
+  <a href="fly.html" >
+  <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/art/fly/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Flying machine</h4>
-      <p class="card-text">A flying machine inspired by the structure of crystal</p>
+      <h4 class="card-title" style="color: black">Flying machine</h4>
+      <p class="card-text" style="color: black">A flying machine inspired by the structure of crystal</p>
       <p> <small>(Tools: Rhino, Illustrator, Photoshop, Indesign, Photography, Laser Cutting , 3D Printing, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="fly.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
+
   <div class="card text-center" style="visibility: hidden;">
     <img class="card-img-top" src="image/architecture/building/1.jpg" alt="Card image cap">
     <div class="card-body">
@@ -161,28 +169,16 @@
 
 
 <!-- footer -->
-    <footer class="footer">
-      <div class="row">
+<footer class="footer">
 
-        <div class="col-sm-4">
-          <p>Categories</p>
-          <a href="architecture.html">Architecture</a>
-          <a href="art.html">Art</a>
-          <a href="interior.html">Interior Design</a>
-          <a href="design.html">User Interface</a>
-        </div>
+      <nav class="nav">
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="design.html">Projects</a>
+        <a class="nav-link" href="resume.html">Resume</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </nav>
 
-        <div class="col-sm-4">
-          <p>Social Media</p>
-          <a class="p" href="https://www.linkedin.com/in/sherry-li-062447b2">Linkedin</a>
-        </div>
 
-        <div class="col-sm-4">
-          <p>Contact Info</p>
-          <p class="email">nachuan@wustl.edu</p>
-        </div>
-        
-      </div>
     </footer>
 
 
