--- a/design.html
+++ b/design.html
@@ -15,9 +15,9 @@
 
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff;">
   <!-- Brand -->
-  <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a> 
+<!--   <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a>  -->
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -34,7 +34,7 @@
         <a class="nav-link" href="about.html" >About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="design.html">Design</a>
+        <a class="nav-link active" href="design.html">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="resume.html">Resume</a>
@@ -50,7 +50,16 @@
 
 
 
-<ul class="nav justify-content-center designNav">
+
+
+
+
+
+<!-- project card -->
+
+<div class="card-deck" id="projectCard">
+
+  <ul class="nav justify-content-center designNav" style="margin: 0 auto">
   <li class="nav-item">
     <a class="nav-link active" href="design.html">UI/UX</a>
   </li>
@@ -65,72 +74,83 @@
   </li>
 </ul>
 
-
-
-
-<!-- project card -->
-
-<div class="card-deck" id="projectCard">
   <div class="row">
-  <div class="card text-center">
+
+  <a href="journey.html" >
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Journey</h4>
-      <p class="card-text">A app designed for travellers to record and share their journey.</p>
+      <h4 class="card-title" style="color: black">Journey</h4>
+      <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
       <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  
-  <div class="card text-center">
+  </a>
+
+  <a href="life.html" >
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Foodly</h4>
-      <p class="card-text">A app encouraging people to live healthier through eating nutritious food.</p>
+      <h4 class="card-title" style="color: black">Foodly</h4>
+      <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
       <p> <small>(Tools: Proto.io, Illustrator)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="life.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="fuzhou.html" >
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Fuzhou</h4>
-      <p class="card-text">A website designed to preserve the dialect in Fuzhou, China.</p>
+      <h4 class="card-title" style="color: black">Fuzhou</h4>
+      <p class="card-text" style="color: black">A website designed to preserve the dialect in Fuzhou, China.</p>
       <p> <small>(Tools: Proto.io, Illustrator)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="fuzhou.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
+  
 </div>
 
-<div class="row">
-  <div class="card text-center">
+  <div class="row">
+
+  <a href="split.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Split</h4>
-      <p class="card-text">A visualized calculator for spliting bills.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <h4 class="card-title" style="color: black">Split</h4>
+      <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
+      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="split.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="uber.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Uber</h4>
-      <p class="card-text">Redesign UI for multiple destinations.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+      <h4 class="card-title" style="color: black">Uber</h4>
+      <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
+      <p> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="uber.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
   <div class="card text-center" style="visibility: hidden;">
     <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
     <div class="card-body">
@@ -145,28 +165,16 @@
 </div>
 
 <!-- footer -->
-    <footer class="footer">
-      <div class="row">
+<footer class="footer">
 
-        <div class="col-sm-4">
-          <p>Categories</p>
-          <a href="architecture.html">Architecture</a>
-          <a href="art.html">Art</a>
-          <a href="interior.html">Interior Design</a>
-          <a href="design.html">User Interface</a>
-        </div>
+      <nav class="nav">
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="design.html">Projects</a>
+        <a class="nav-link" href="resume.html">Resume</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </nav>
 
-        <div class="col-sm-4">
-          <p>Social Media</p>
-          <a class="p" href="https://www.linkedin.com/in/sherry-li-062447b2">Linkedin</a>
-        </div>
 
-        <div class="col-sm-4">
-          <p>Contact Info</p>
-          <p class="email">nachuan@wustl.edu</p>
-        </div>
-        
-      </div>
     </footer>
 
 
