--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   <body>
 
 
+
 <!-- nav bar -->
 
-<nav class="navbar navbar-expand-md navbar-dark" id="navbar">
+
+
+<nav class="navbar navbar-expand-md navbar-dark" id="navbar" style="background-color : #74b9ff;" >
   <!-- Brand -->
-  <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a> 
+<!--   <a class="navbar-brand" href="index.html">Portfolio of Sherry Li</a>  -->
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -34,7 +37,7 @@
         <a class="nav-link" href="about.html" >About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="design.html">Design</a>
+        <a class="nav-link" href="design.html">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="resume.html">Resume</a>
@@ -49,13 +52,17 @@
 
 
 <!-- self intro -->
-<div id="selfIntro">
+
+<div id="fix">
+</div>
+
+<!-- <div id="selfIntro" class="brightcolor">
   <div class="row">
     <div class="col-sm-2">
     </div>
 
     <div class="col-sm-8">
-      <div class="jumbotron">
+      <div class="jumbotron" style="background-color : #74b9ff; color: white">
         <h1 class="display-3" style="font-size: 40px;">Hello, I'm Sherry, a multidiciplinary designer</h1>
         <p>For me, there is more than one way to become a creative designer. I have been learning architecture, drawing and painting. I have been working as an interior designer and website designer. I have also been learning UI/UX design and coding. All of these teach me to observe from different perspectives, to design for users and to combine inspiration and conscientiousness.</p>
       </div>
@@ -65,7 +72,9 @@
     </div>
 
   </div>
-</div>
+</div> -->
+
+
 
 
 
@@ -80,65 +89,82 @@
 
 <div class="card-deck" id="projectCard">
   <div class="row">
-  <div class="card text-center">
+
+  <a href="journey.html" >
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/journey/2.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Journey</h4>
-      <p class="card-text">A app designed for travellers to record and share their journey.</p>
+      <h4 class="card-title" style="color: black">Journey</h4>
+      <p class="card-text" style="color: black">A app designed for travellers to record and share their journey.</p>
       <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer" style="visibility: hidden;">
       <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  
-  <div class="card text-center">
+  </a>
+
+  <a href="life.html" >
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/life/58.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Foodly</h4>
-      <p class="card-text">A app encouraging people to live healthier through eating nutritious food.</p>
+      <h4 class="card-title" style="color: black">Foodly</h4>
+      <p class="card-text" style="color: black">A app encouraging people to live healthier through eating nutritious food.</p>
       <p> <small>(Tools: Proto.io, Illustrator)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="life.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="fuzhou.html" >
+  <div class="card text-center" style="height: 450px;">
     <img class="card-img-top" src="image/fuzhou/8.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Fuzhou</h4>
-      <p class="card-text">A website designed to preserve the dialect in Fuzhou, China.</p>
+      <h4 class="card-title" style="color: black">Fuzhou</h4>
+      <p class="card-text" style="color: black">A website designed to preserve the dialect in Fuzhou, China.</p>
       <p> <small>(Tools: Proto.io, Illustrator)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="fuzhou.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
+  
 </div>
 
   <div class="row">
-  <div class="card text-center">
+
+  <a href="split.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/split/18.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Split</h4>
-      <p class="card-text">A visualized calculator for spliting bills.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
+      <h4 class="card-title" style="color: black">Split</h4>
+      <p class="card-text" style="color: black">A visualized calculator for spliting bills.</p>
+      <p> <small>(Tools: Proto.io, html, css, javascript, jQuery)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="split.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="uber.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/uber/1.png" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Uber</h4>
-      <p class="card-text">Redesign UI for multiple destinations.</p>
-      <p style="padding-top: 22px"> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
+      <h4 class="card-title" style="color: black">Uber</h4>
+      <p class="card-text" style="color: black">Redesign UI for multiple destinations.</p>
+      <p> <small>(Tools: Proto.io, illustrator, photoshop)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="uber.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
   <div class="card text-center" style="visibility: hidden;">
     <img class="card-img-top" src="image/fuzhou/1.png" alt="Card image cap">
     <div class="card-body">
@@ -161,39 +187,49 @@
 </div>
 
 <div class="card-deck" id="projectCard">
-  <div class="card text-center">
+
+  <a href="music.html" >
+  <div class="card text-center" style="height: 490px;">
     <img class="card-img-top" src="image/architecture/river/2.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Auditorium on Mississipi</h4>
-      <p class="card-text">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
+      <h4 class="card-title" style="color: black">Auditorium on Mississipi</h4>
+      <p class="card-text" style="color: black">A challenging project sited on a bridge to prompt visitors to engage with music and the environment</p>
       <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="music.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="green.html" >
+  <div class="card text-center" style="height: 490px;">
     <img class="card-img-top" src="image/architecture/greenhouse/3.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Greenhouse</h4>
-      <p class="card-text">A project that considers water, wind, sunlight conditions for different types of plants</p>
+      <h4 class="card-title" style="color: black">Greenhouse</h4>
+      <p class="card-text" style="color: black">A project that considers water, wind, sunlight conditions for different types of plants</p>
       <p style="padding-top: 22px"> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="green.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="journey.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="chapel.html" >
+  <div class="card text-center" style="height: 490px;">
     <img class="card-img-top" src="image/architecture/chapel/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Urban Chapel</h4>
-      <p class="card-text">A chapel that designed for people to meditate in forest park</p>
+      <h4 class="card-title" style="color: black">Urban Chapel</h4>
+      <p class="card-text" style="color: black">A chapel that designed for people to meditate in forest park</p>
       <p style="padding-top: 22px"> <small>(Tools: Handdrafting, Photography, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer" style="visibility: hidden;">
       <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
 </div>
 
 <!-- project card -->
@@ -204,28 +240,38 @@
 </div>
 
 <div class="card-deck" id="projectCard">
-  <div class="card text-center">
+
+
+  <a href="view.html" >
+  <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/architecture/view/1.png" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">The View From Here</h4>
-      <p class="card-text">Apartment designed for college students to enjoy both urban life and relieve from nature.</p>
+      <h4 class="card-title" style="color: black">The View From Here</h4>
+      <p class="card-text" style="color: black">Apartment designed for college students to enjoy both urban life and relieve from nature.</p>
       <p> <small>(Tools: Rhino, Revit, Illustrator, Photoshop, Laser Cutting, Modeling)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="view.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="opartments.html" >
+  <div class="card text-center" style="height: 470px;">
     <img class="card-img-top" src="image/architecture/opartments/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Opartments</h4>
-      <p class="card-text">An project designed for a client in DC for a co-working space. </p>
+      <h4 class="card-title" style="color: black">Opartments</h4>
+      <p class="card-text" style="color: black">An project designed for a client in DC for a co-working space. </p>
       <p> <small>(Tools: Revit, Octane Rendering, Photoshop and Illustrator)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="opartments.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
+
+
   <div class="card text-center" style="visibility: hidden;">
     <img class="card-img-top" src="image/architecture/river/2.jpg" alt="Card image cap">
     <div class="card-body">
@@ -246,64 +292,62 @@
 </div>
 
 <div class="card-deck" id="projectCard">
-  <div class="card text-center">
+  <a href="painting.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/art/painting/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Painting</h4>
-      <p class="card-text">Studyings of color, landscape and human body</p>
+      <h4 class="card-title" style="color: black">Painting</h4>
+      <p class="card-text" style="color: black">Studyings of color, landscape and human body</p>
       <p> <small>(Tools: Oil Painting)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="painting.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="drawing.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/art/drawing/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Drawing</h4>
-      <p class="card-text">Studyings of Black and white</p>
+      <h4 class="card-title" style="color: black">Drawing</h4>
+      <p class="card-text" style="color: black">Studyings of Black and white</p>
       <p> <small>(Tools: Hand Drawing)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="drawing.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
-  <div class="card text-center">
+  </a>
+
+  <a href="photography.html" >
+  <div class="card text-center" style="height: 430px;">
     <img class="card-img-top" src="image/art/photography/1.jpg" alt="Card image cap">
     <div class="card-body">
-      <h4 class="card-title">Photography</h4>
-      <p class="card-text">Studyings of Details</p>
+      <h4 class="card-title" style="color: black">Photography</h4>
+      <p class="card-text" style="color: black">Studyings of Details</p>
       <p> <small>(Tools: DSLR Camera)</small></p>
     </div>
-    <div class="card-footer">
-      <a href="photography.html" class="card-link">Read more</a>
+    <div class="card-footer" style="visibility: hidden;">
+      <a href="chapel.html" class="card-link">Read more</a>
     </div>
   </div>
+  </a>
+
 </div>
+
 
 <!-- footer -->
     <footer class="footer">
-      <div class="row">
 
-        <div class="col-sm-4">
-          <p>Categories</p>
-          <a href="architecture.html">Architecture</a>
-          <a href="art.html">Art</a>
-          <a href="interior.html">Interior Design</a>
-          <a href="design.html">User Interface</a>
-        </div>
+      <nav class="nav">
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="design.html">Projects</a>
+        <a class="nav-link" href="resume.html">Resume</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </nav>
 
-        <div class="col-sm-4">
-          <p>Social Media</p>
-          <a class="p" href="https://www.linkedin.com/in/sherry-li-062447b2">Linkedin</a>
-        </div>
 
-        <div class="col-sm-4">
-          <p>Contact Info</p>
-          <p class="email">nachuan@wustl.edu</p>
-        </div>
-        
-      </div>
     </footer>
 
 
